--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
       <div class="intro-hero__content">
         <h1>About Drew</h1>
         <p class="lead">
-          Physical oceanography meets field craft, data, and storytelling — a life built around blue water.
+          The oceanographer, data scientist, writer, and paddler behind this adventure.
         </p>
       </div>
     </section>
@@ -90,7 +90,7 @@
       <div class="profile-grid">
         <figure class="profile-photo">
           <img class="avatar" src="photos/author.jpeg" alt="Portrait of Drew Burrier" />
-          <figcaption class="muted">Honolulu, Hawaiʻi</figcaption>
+          
         </figure>
 
         <div class="prose">
