open oeanography lesson 1

--- a/science.html
+++ b/science.html
@@ -122,8 +122,8 @@
               </p>
             </div>
             <div style="display:flex; gap:8px; flex-wrap:wrap;">
-              <a class="btn btn-outline" href="#" aria-disabled="true">Medium (soon)</a>
-              <a class="btn" href="#" aria-disabled="true">YouTube (soon)</a>
+              <a class="btn btn-outline" href="https://medium.com/@drew.burrier/open-oceanography-the-shape-of-the-ocean-5b0dda4ae957?sk=d500c194e693e122cd5fc97d204b0c46" aria-disabled="true">Medium</a>
+              <a class="btn" href="https://github.com/druzzy811/Open-Oceanography/blob/main/Notebooks/Bathymetry.ipynb" aria-disabled="true">Github</a>
             </div>
           </div>
         </article>
